# haskelldca

./: .gitignore  .hindent.yaml  LICENSE  README.md  baksetup.hs  dca.cabal  stack-release.yaml  stack.yaml
bench/: BenchGridneighs.hs
src/: AccUtils.hs  Agent.hs  Base.hs  EventGen.hs  ExGrids.hs  Gridconsts.hs  Gridfuncs.hs  Gridneighs.hs  LensUtils.hs  Main.hs  Opt.hs  Scratch.hs  SimRunner.hs  Simulator.hs  Stats.hs  Utils.hs  gridfuncs.hs
src/EventGen/: Internal.hs
test/: AgentSpec.hs  EventGenSpec.hs  GridfuncsSpec.hs  GridneighsSpec.hs  LensUtilsSpec.hs  TestBase.hs  TestGridneighs.hs  UtilsSpec.hs
