name:                dca
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/dca#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable dca-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       
      Base
    , Gridfuncs
    , Gridneighs
    , Opt
    , Stats
    , EventGen
    , Simulator
    , Scratch
  build-depends:       
      base >= 4.7 && < 5
    , accelerate
    , containers
    , optparse-applicative
    , mtl
    , heap
    , random
    , random-fu
    , time
    , lens

benchmark dca-bench
  type: exitcode-stdio-1.0
  main-is: BenchGridneighs.hs 
  other-modules:
      Gridneighs
    , Base
  hs-source-dirs:
      bench
      src
  ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N -main-is BenchGridneighs
  build-depends:
      base >=4.7 && <5
    , accelerate
    , criterion
  default-language: Haskell2010

test-suite dca-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs 
  other-modules:
      Gridneighs
      GridneighsSpec
    , Base
  hs-source-dirs:
      test
      src
  ghc-options: -O -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , accelerate
    , containers
    , hspec
  default-language: Haskell2010
