name:                dca
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/tsoernes/haskell-dca#readme
license:             MIT
license-file:        LICENSE
author:              Torstein Sørnes
maintainer:          t.soernes@gmail.com
copyright:           2018 Torstein Sørnes
category:            Machine Learning
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable dca-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       
      Base
    , Gridfuncs
    , Gridneighs
    , Opt
    , Stats
    , EventGen
    , EventGen.Internal
    , SimRunner
    , Simulator
    , LensUtils
    , AccUtils
    , Agent
    , Scratch
    , TestBase
  hs-source-dirs:
      test
      src
  build-depends:       
      base >= 4.7 && < 5
    , hspec
    , deepseq
    , accelerate
    , accelerate-llvm-native
    , accelerate-blas
    , lens-accelerate
    , extra
    , containers
    , optparse-applicative
    , rvar
    , monad-loops >= 0.4
    , mtl
    , heap
    , random
    , random-fu
    , random-source
    , mersenne-random-pure64
    , time
    , lens

benchmark dca-bench
  type: exitcode-stdio-1.0
  main-is: BenchGridneighs.hs 
  other-modules:
      Gridneighs
    , Base
  hs-source-dirs:
      bench
      src
  ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N -main-is BenchGridneighs
  build-depends:
      base >=4.7 && <5
    , accelerate
    , criterion
  default-language: Haskell2010

test-suite dca-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs 
  other-modules:
      Agent
    , TestBase
    , AgentSpec
    , Gridneighs
    , GridneighsSpec
    , Gridfuncs
    , GridfuncsSpec
    , LensUtils 
    , LensUtilsSpec
    , AccUtils
    , EventGen.Internal
    , EventGen
    , EventGenSpec
    , Stats
    , Simulator
    , Base
    , Opt
  hs-source-dirs:
      test
      src
  ghc-options: -O -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , deepseq
    , hspec
    , accelerate
    , accelerate-llvm-native
    , accelerate-blas
    , lens-accelerate
    , containers
    , optparse-applicative
    , rvar
    , mtl
    , heap
    , random
    , random-fu
    , random-source
    , mersenne-random-pure64
    , time
    , lens
    , extra
  default-language: Haskell2010
